added jwt auth system and users system
